@@ -1,3 +1,34 @@
+ext.vendor = { ->
+    // By specifying the vendor, we force us (and CI) to
+    // use that specific JDK version. If it is not locally
+    // available, Gradle will provision the toolchain, i.e.
+    // download it.
+    if (project.hasProperty("javaLanguageVendor")) {
+        return JvmVendorSpec.matching(project.property('javaLanguageVendor'))
+    } else {
+        return JvmVendorSpec.matching("ADOPTIUM")
+    }
+}
+
+ext.languageVersion = { ->
+    if (project.hasProperty("javaLanguageVersion")) {
+        return JavaLanguageVersion.of(project.property('javaLanguageVersion'))
+    } else {
+        return JavaLanguageVersion.of(11)
+    }
+}
+
+allprojects {
+    plugins.withType(JavaPlugin) {
+        java {
+            toolchain {
+                vendor = vendor()
+                languageVersion = languageVersion()
+            }
+        }
+    }
+}
+
 allprojects {
     plugins.withType(JavaLibraryPlugin) {
         sourceCompatibility = JavaVersion.VERSION_11
@@ -40,7 +71,15 @@ allprojects {
                 suspend = true
             }
 
-            jvmArgs += '--illegal-access=permit'
+            // Since JDK 17 the default access to the following
+            // packages is "deny". We need to open them in order
+            // to gain access in GDS / Neo4j.
+            jvmArgs += '--add-opens=java.base/java.lang=ALL-UNNAMED'
+            jvmArgs += '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED'
+            jvmArgs += '--add-opens=java.base/java.nio=ALL-UNNAMED'
+            jvmArgs += '--add-opens=java.base/java.util.stream=ALL-UNNAMED'
+            jvmArgs += '--add-opens=java.base/sun.net.www.protocol.http=ALL-UNNAMED'
+
             maxHeapSize = "3G"
             useJUnitPlatform {
                 includeEngines 'junit-jupiter'
@@ -63,7 +102,16 @@ allprojects {
             targetCompatibility = JavaVersion.VERSION_11
             options.warnings = true
             options.encoding = 'UTF-8'
-            options.forkOptions.jvmArgs += '--illegal-access=permit'
+
+            // Since JDK 17 the default access to the following
+            // packages is "deny". We need to open them in order
+            // to gain access in GDS / Neo4j.
+            options.forkOptions.jvmArgs += '--add-opens=java.base/java.lang=ALL-UNNAMED'
+            options.forkOptions.jvmArgs += '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED'
+            options.forkOptions.jvmArgs += '--add-opens=java.base/java.nio=ALL-UNNAMED'
+            options.forkOptions.jvmArgs += '--add-opens=java.base/java.util.stream=ALL-UNNAMED'
+            options.forkOptions.jvmArgs += '--add-opens=java.base/sun.net.www.protocol.http=ALL-UNNAMED'
+
             options.compilerArgs += [
                     '-parameters',
                     '-Xlint:all,-cast,-deprecation,-processing,-serial,-try,-unchecked,-varargs,-rawtypes,-removal',
